--- a/PluginManager/PluginManager.csproj
+++ b/PluginManager/PluginManager.csproj
@@ -6,6 +6,6 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0"/>
   </ItemGroup>
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.2;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 </Project>
